[tool.uv]
package = false
managed = false

[project]
name = "laissez-passer"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4",
    "country-converter",
    "flask",
    "markitdown[pdf]",
    "pandas",
    "playwright",
    "python-dateutil",
    "openai",
    "requests",
]
